--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "tsa-rn",
+  "name": "tsa-template-rn",
   "version": "1.0.0",
+  "description": "TSA Template Expo React Native",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -30,7 +31,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "13.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "12.0.2",
+    "@semantic-release/release-notes-generator": "14.1.0",
     "@types/react": "~19.1.10",
+    "baseline-browser-mapping": "2.9.14",
+    "conventional-changelog-conventionalcommits": "9.1.0",
+    "semantic-release": "25.0.2",
     "typescript": "^5.3.3"
   },
   "private": true
