--- a/releaserc.json
+++ b/releaserc.json
@@ -8,6 +8,10 @@
       {
         "name": "development",
         "prerelease": "alpha"
+      },
+      {
+        "name": "main",
+        "prerelease": "alpha"
       }
     ],
     "plugins": [
